src/objects/VProfileId__c.object
<CustomObject>
    <fields>
        <fullName>NA_Virtual_Ops__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual NA Ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_Virtual_RM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual NA RM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_Virtual_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual NA User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <description>To be referenced in code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Team Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAsiaSalesRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Asia Sales &amp; RM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAuSalesRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual AU Sales &amp; RM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VEuSalesRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual EU Sales &amp; RM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>V_AU_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual AU User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>V_Asia_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Asia User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Virtual_EU_NA_Sales_RM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual EU NA Sales &amp; RM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Virtual_NA_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual NA Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Virtual_User__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Virtual User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WE_All__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All profiles, TRUE if Wex Europe Profile ID</description>
        <label>Virtual EU User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WE_CS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Wex Europe Customer Services profiles</description>
        <label>Virtual EU CS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WE_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Wex Europe Compliance profiles</description>
        <label>Virtual EU Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WE_Imp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Wex Europe Implementation profiles</description>
        <label>Virtual EU Implementation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WE_Partnerships__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User&apos;s job role is managing partnerships</description>
        <label>Virtual EU Partnerships</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WE_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Wex Europe Product profiles</description>
        <label>Virtual EU Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WE_RM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Wex Europe Relationship Managers</description>
        <label>Virtual EU RM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WE_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Wex Europe Sales profiles</description>
        <label>Virtual EU Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wex_Europe_Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual EU Administrator</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Setting_Overview_Groups</fullName>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>Team_Name__c</columns>
        <columns>Virtual_User__c</columns>
        <columns>V_Asia_User__c</columns>
        <columns>V_AU_User__c</columns>
        <columns>NA_Virtual_User__c</columns>
        <columns>WE_All__c</columns>
        <columns>Virtual_EU_NA_Sales_RM__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>WE_RM__c</columns>
        <columns>WE_Sales__c</columns>
        <filterScope>Everything</filterScope>
        <label>Setting Overview - Groups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Setting_Overview_Teams</fullName>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>Team_Name__c</columns>
        <columns>VAsiaSalesRM__c</columns>
        <columns>VAuSalesRM__c</columns>
        <columns>Wex_Europe_Administrator__c</columns>
        <columns>WE_CS__c</columns>
        <columns>WE_Imp__c</columns>
        <columns>WE_Partnerships__c</columns>
        <columns>WE_Product__c</columns>
        <columns>WE_RM__c</columns>
        <columns>WE_Sales__c</columns>
        <columns>VEuSalesRM__c</columns>
        <columns>NA_Virtual_Ops__c</columns>
        <columns>NA_Virtual_RM__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Setting Overview - Teams</label>
        <language>en_US</language>
    </listViews>
</CustomObject>